<resources>
    <string name="app_name">SubLearn</string>
    <string name="app_name_fa">ساب لرن</string>
    <string name="banner_text">انگلیسی را آسان و با لذت بیاموزید!</string>
    <string name="login_user">ورود کاربر</string>
    <string name="register_user">نام نویسی کاربر</string>
    <string name="name_family">نام و نام خانوادگی</string>
    <string name="password">کلیدواژه</string>
    <string name="example_mail">ایمیل : example@gmail.com</string>
    <string name="profile">پروفایل</string>
    <string name="learn">آموزش</string>
    <string name="translate">مترجم</string>
    <string name="dictionary">دیکشنری</string>
    <string name="home">خانه</string>
    <string name="forget_password">فراموشی کلیدواژه</string>
    <string name="msv_read_more">Read More</string>
    <string name="cinema_tv">سینما و تلویزیون</string>
    <string name="musics">موسیقی</string>
    <string name="conversation">گفتوگو</string>
    <string name="search_in_dictionary">جستوجوی واژه در دیکشنری</string>
    <string name="insert_your_text">متنی که میخوای ترجمه کنی رو برام بنویس</string>
    <string name="library">کتابخانه</string>
    <string name="grammer">گرامر</string>
    <string name="user_account">کاربری</string>
    <string name="settings">تنظیمات</string>
    <string name="support">پشتیبانی</string>
    <string name="invite_friends">دعوت از دوستان</string>
    <string name="insert_your_email">ایمیل خود را وارد کنید</string>
    <string name="login_register_problem">اشکالی در ورود شما پیش آمده ، لطفا به پشتیبانی مراجعه نمایید</string>
    <string name="user_not_found">کاربر یافت نشد</string>
    <string name="password_send_to_email">رمز عبور برای ایمیل شما ارسال شد</string>
    <string name="login_user_time_left">هر 5 دقیقه یکبار اجازه ورود دارید ، لطفا منتظر بمانید</string>
    <string name="email_end_error">ایمیل شما باید با gmail.com@ به پایان برسد</string>
    <string name="confirm">نهایی کردن</string>
    <string name="authorization_code">کلیدواژه یکبار مصرف</string>
    <string name="insert_your_password">رمز عبود شما باید حداقل 8 حرف باشد</string>
    <string name="wrong_password">رمز عبور اشتباه است</string>
    <string name="create_user_problem">یک حساب کاربری با این ایمیل ساخته شده است</string>
    <string name="insert_authorization_code">لطفا رمز عبور ارسال شده به ایمیل را وارد کنید</string>
    <string name="support_for_problem">مشکلی در اتصال به شبکه رخ داده است. لطفاً به پشتیبانی مراجعه نمایید</string>
    <string name="movies">سینمایی</string>
    <string name="more">بیشتر...</string>
    <string name="series">سریال ها</string>
    <string name="series_bot_found">سریال شما یافت نشد</string>
    <string name="select_lagnuage">انتخاب زبان</string>
    <string name="starred_words">واژگان ستاره دار</string>
    <string name="word">واژه</string>
    <string name="dictionary_history">تاریخچه واژگان</string>
    <string name="my_social_network">شبکه های اجتماعی ما</string>
    <string name="translate_history">تاریخچه ترجمه</string>
</resources>