<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBackground">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/fragment_welcome_main_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/welcome_main_image" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/black_shader"
        app:layout_constraintBottom_toBottomOf="@id/fragment_welcome_main_image"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_welcome_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/app_name_fa"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_welcome_main_image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_welcome_app_banner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/banner_text"
        android:textColor="@color/hintColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_welcome_app_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_welcome_login_user"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="90dp"
        android:layout_marginRight="32dp"
        android:text="@string/login_user"
        android:textColor="@color/textColor"
        app:backgroundTint="@color/blueColor"
        android:textSize="16sp"
        android:textStyle="bold"
        app:cornerRadius="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_welcome_app_banner" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/fragment_welcome_register_user"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginLeft="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/register_user"
        android:textColor="@color/textColor"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:cornerRadius="16dp"
        android:textStyle="bold"
        app:rippleColor="@color/pageBackground"
        app:backgroundTint="@color/semiBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_welcome_login_user" />

</androidx.constraintlayout.widget.ConstraintLayout>