<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pageBackground">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/fragment_learn_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/learn"
        android:textColor="@color/textColor"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/fragment_learn_grammer_cardview"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/semiBackground"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_learn_title"
        app:rippleColor="@color/pageBackground"
        app:strokeColor="@android:color/transparent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/fragment_learn_grammer_logo"
                android:layout_width="80dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/grammer_icon" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/black_shader"
                app:layout_constraintBottom_toBottomOf="@id/fragment_learn_grammer_logo"
                app:layout_constraintLeft_toLeftOf="@id/fragment_learn_grammer_logo"
                app:layout_constraintRight_toRightOf="@id/fragment_learn_grammer_logo"
                app:layout_constraintTop_toTopOf="@id/fragment_learn_grammer_logo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="16dp"
                android:gravity="center_vertical|left"
                android:text="@string/grammer"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/fragment_learn_grammer_logo"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/fragment_learn_library_cardview"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/semiBackground"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_learn_grammer_cardview"
        app:rippleColor="@color/pageBackground"
        app:strokeColor="@android:color/transparent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/fragment_learn_library_logo"
                android:layout_width="80dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/library_logo" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/black_shader"
                app:layout_constraintBottom_toBottomOf="@id/fragment_learn_library_logo"
                app:layout_constraintLeft_toLeftOf="@id/fragment_learn_library_logo"
                app:layout_constraintRight_toRightOf="@id/fragment_learn_library_logo"
                app:layout_constraintTop_toTopOf="@id/fragment_learn_library_logo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="16dp"
                android:gravity="center_vertical|left"
                android:text="@string/library"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/fragment_learn_library_logo"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/fragment_learn_musics_cardview"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/semiBackground"
        app:cardCornerRadius="16dp"
        app:cardElevation="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fragment_learn_library_cardview"
        app:rippleColor="@color/pageBackground"
        app:strokeColor="@android:color/transparent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/fragment_learn_musics_logo"
                android:layout_width="80dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/music_logo" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/black_shader"
                app:layout_constraintBottom_toBottomOf="@id/fragment_learn_musics_logo"
                app:layout_constraintLeft_toLeftOf="@id/fragment_learn_musics_logo"
                app:layout_constraintRight_toRightOf="@id/fragment_learn_musics_logo"
                app:layout_constraintTop_toTopOf="@id/fragment_learn_musics_logo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginLeft="16dp"
                android:gravity="center_vertical|left"
                android:text="@string/musics"
                android:textColor="@color/textColor"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/fragment_learn_musics_logo"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>